# Hackathon-demo

./: .gitignore  README.md  app.js  app.py  demo_logging.py  index.html  package.json  pytest.ini  requirements.txt  server.js  styles.css  test_app.py  test_echo.py  test_hello.py  test_logging_middleware.py  test_math.py  test_math_node.js  test_server.js  validate_math.py
analytics-service/: manage.py  pytest.ini  requirements.txt
analytics-service/analytics/: settings.py  urls.py
analytics-service/analytics_app/: middleware.py  urls.py
analytics-service/tests/: test_customer_service.py  test_revenue_service.py  test_sales_service.py  test_utils.py
api-gateway/: Cargo.toml
api-gateway/src/: config.rs  error.rs  main.rs
api-gateway/src/middleware/: auth.rs  logger.rs  mod.rs  rate_limiter.rs
api-gateway/src/services/: mod.rs  routing_service.rs
hello-service/: README.md  __init__.py  app.py
hello-service/tests/: __init__.py  test_app.py
inventory-service/: app.py
inventory-service/models/: inventory_item.py  stock_movement.py  warehouse.py
inventory-service/repositories/: stock_repository.py  warehouse_repository.py
inventory-service/routes/: hello_routes.py  movement_routes.py  stock_routes.py  warehouse_routes.py
inventory-service/services/: alert_service.py  (+2 more)
notification-service/: package.json
order-service/: pom.xml
payment-service/: go.mod  main.go
product-service/: jest.config.js  package.json  tsconfig.json
review-service/: Gemfile  app.rb
shipping-service/: go.mod  main.go
user-service/: README.md  app.py  requirements.txt
(+126 files in other folders)
