[package]
name = "api-gateway"
version = "1.0.0"
edition = "2021"
description = "API Gateway - request routing, rate limiting, JWT validation, and logging"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

